# Doc-standardizer

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  constants.py  main.py
app/ingestion/: reader.py
app/llm/: fallback.py
app/matching/: matcher.py
app/reports/: generator.py
app/segmentation/: segmenter.py
app/template/: renderer.py
templates/: section_schema.json  section_synonyms.yaml  standard_template.docx
tests/: test_standardizer.py
